--- a/css/style.css
+++ b/css/style.css
@@ -72,12 +72,14 @@ header nav ul a:active{
 .header-menu-item2-botton a{
     background-color: f39237;
     border-radius: 0.63rem;
+    border-color: #f39237 !important;
 }
 
 .header-menu-item2-botton a:hover{
     background-color: white;
     color: #f39237;
     border-radius: 0.63rem;
+    border-color: #f39237;
 }
 
 
@@ -1110,8 +1112,8 @@ footer nav ul a{
     
 
     .text-center {
-        font-size: 8px !important ;
-        width: 65% !important;
+        font-size: 15px !important ;
+        width: 80% !important;
     }
 
 
@@ -1124,7 +1126,7 @@ footer nav ul a{
     }
 
     #seccionIndexTest1 .btn.btn-warning.text-white{
-        font-size: 10px !important;
+        font-size: 15px !important;
     }
 
     #seccionIndexTest1 .row.justify-content-start{
@@ -1149,17 +1151,17 @@ footer nav ul a{
 
     #seccionIndexTest2 h3{
         font-weight: bolder !important;
-        width: 170px !important;
-        font-size:13px !important;
+        width: 430 !important;
+        font-size:32px !important;
     }
 
     #seccionIndexTest2 p{
-        width: 200px !important;
-        font-size:08px !important;
+        width: 300px !important;
+        font-size:18px !important;
     }
 
     #seccionIndexTest2 .img-fluid{
-        width: 40% !important;
+        width: 60% !important;
         border-radius: 0.80rem;
         margin-top: -3%;
     }
@@ -1170,7 +1172,7 @@ footer nav ul a{
     }
     
     #seccionIndexTest2 .container-fluid.d-flex{
-        margin-top: unset !important;
+        margin-top: 6% !important;
     }
 
 
@@ -1179,13 +1181,14 @@ footer nav ul a{
     }
 
     #seccionIndexTest3 .main_h2_section3{
-        width: 240px !important;
-        font-size:28px !important;
+        width: 440px !important;
+        font-size:50px !important;
     }
 
     #seccionIndexTest3 .text-center{
-        width: 200px !important;
-        font-size:08px !important;
+        width: 300px !important;
+        font-size:15px !important;
+        
     }
 
     #seccionIndexTest3 .col-12.col-lg-6{
@@ -1195,7 +1198,7 @@ footer nav ul a{
 
     #seccionIndexTest3 .img-fluid{
 
-        width: 40% !important;
+        width: 70% !important;
         border-radius: 0.80rem;
         margin-top: -3%;
     }
@@ -1210,7 +1213,7 @@ footer nav ul a{
     }
 
     #seccionIndexTest3 .row.d-flex.flex-row-reverse:nth-child(2){
-        margin-top: 15% !important;
+        margin-top: 5% !important;
     }
 
     #seccionIndexTest3 .row.d-flex.flex-row-reverse:nth-child(3){
@@ -1222,7 +1225,7 @@ footer nav ul a{
     }
 
     #seccionIndexTest3 .btn.btn-warning.text-white{
-        font-size: 10px !important;
+        font-size: 20px !important;
     }
 
     .main_h1_tittlindext3{
