--- a/scss/pages/login.scss
+++ b/scss/pages/login.scss
@@ -102,11 +102,27 @@
 
     .main-tittle-login form{
         margin-top: 10%;
+
+        input{
+            padding: 20px  55px;
+        }
+
+        [type=submit]{
+            
+            font-size: 17px;
+        }
+
+    }
+
+    .main-forgetlogin{
+        margin-top: 5%;
+        font-size: 12px;
     }
 
     .main-tittle-login h1{
         margin-top: 2%;
-        ;
+        font-size: 40px;
+        width: 80%;
     }
 
     .main-tittle-login img{
