--- a/scss/pages/selectprices.scss
+++ b/scss/pages/selectprices.scss
@@ -6,22 +6,146 @@
 .body-selectprices{
     display: grid;
     grid-template-columns:repeat(3,1fr);
-    grid-template-rows: 50px  auto  50px;
+    grid-template-rows: auto  auto  auto;
     grid-template-areas: 
         "header header header"
         "main main main"
         "footer footer footer";
 
-
-        
-        
         header{
-            /* Estilo Header SelectPrices */
+            background-color: white;
+    
+            #navbarNav .nav-link {
+                color: #1c77c3 !important;
+            }
+            
+            nav ul a:active{
+                color: gray;
+            }
+            .collapse .navbar-collapse .d-flex .justify-content-between {
+                display: flex !important;
+                justify-content: space-between !important;
+            }
+            nav{
+                
+                width: 100%;
+                font-size: small;
+                font-weight: 580;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+                margin-top: unset;
+                position: fixed;
+                padding: 12px 10px;
+                background-color: #1c77c3;
+                img{
+                    width: 50;
+                    display: flex;
+                    margin-left: 2%;
+                }
+            }
+            
+            
+            .image-header{
+                width: 50;
+                margin-left: 2%;
+            }
+            
+            
+            nav ul {
+                text-decoration: none;
+                list-style-type: none;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                align-items: center;
+                
+            }
+            
+            nav ul a{
+                text-decoration: none;
+                color: white;
+                padding: 12px;
+            
+            }
+            
+            nav ul a:active{
+                color: gray;
+            }
+            
+          }
+        
+          .header-menu-item1{
+            margin-left: 10%;
+        }
+        
+        .header-menu-item2{
+            margin-right: 1.5%;
+        }
+        
+        .header-menu-item2-botton a{
+            background-color: f39237;
+            border-radius: 0.63rem;
+            border-color: #f39237 !important;
+        }
+        
+        .header-menu-item2-botton a:hover{
+            background-color: white;
+            color: #f39237;
+            border-radius: 0.63rem;
+            border-color: #f39237;
+        }
+        
+        
+        
+        // header{
+           
+        // }
+
+        main{
+            background-color:white;
+            grid-area: main ;
+        }
+
+                    footer{
+                        background-color: gray;
+                        grid-area: footer;
+                        margin-top: 10%;
+                        height: 40%;
+                        nav{
+                            height: 100% !important;
+                            width: 100% ;
+                            font-size: small;
+                            font-weight: 580;
+                            display: flex;
+                            flex-direction: row;
+                            align-items: center;
+                            margin-top: 1% !important;
+                            position: sticky;
+                            justify-content:flex-start !important;
+                            background-color: map-get($paleta_colores,color_footer);
+                        }
+                    }
+}
+
+
+
+
+/* Main Selectprices */
+
+ .main-selectprices{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 10%;
+            .h-Titules{
+                     /* Estilo Post Header SelectPrices */
             display: flex;
             flex-direction: row;
             align-items: center;
             color: gray;
-            font-size: 13px;
+            
             background-color:white;
             grid-area: header ;
 
@@ -35,41 +159,22 @@
                     }
 
                     h2{
-                        margin-left: 5%;
+                        margin-left: 32%;
+                        font-size: 20px !important;
                     }
-        }
-
-        main{
-            background-color:white;
-            grid-area: main ;
-        }
-
-        footer{
-            background-color: white;
-            grid-area: footer;
-        }
-}
-
-
-
-
-/* Main Selectprices */
-
- .main-selectprices{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
+            }
             .form-search{
                 display: flex;
                 justify-content: center;
-                margin-bottom: 15%;
+                margin-bottom: 7%;
 
                             input{
                                 border-radius: 0.63rem;
                                 border-style:solid;
                                 padding: 10px  35px;
                                 font-style: italic;
+                                font-size: 15px;
+                                
                             }
             }
 
@@ -86,7 +191,7 @@
 .main-selectprices-items{
     display: flex;
     flex-direction: row;
-    font-size: 10px;
+    font-size: 10px !important;
     flex-wrap:wrap;
 
 }
@@ -95,9 +200,9 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 31%;
+    width: 31% ;
     margin: 1%;
-    font-size: 10px;
+    font-size: 10px !important;
 }
 
 .selectprices-item1-image{
@@ -117,6 +222,16 @@
     display: flex;
     flex-direction: column;
     margin-left: 1%;
+    
+
+        h3{
+            font-size: 1.50em;
+            font-weight:bolder;
+        }
+
+        p{
+            margin-top: -5%;
+        }
 
 
     form{
@@ -128,9 +243,9 @@
                     border-style:solid;
                     padding: 3px  10px;
                     width: 100%;
-                    margin-bottom: 3%;
+                    margin-bottom: unset;
                     font-size: 11px;
-                    margin-top: 5%;
+                    margin-top: -5%;
                 }
 
                 input[type=number]{
@@ -140,6 +255,7 @@
                     margin-bottom: 3%;
                     border-style:ridge;
                     font-size: 10px;
+                    margin-top: 3%;
                 }
 
                 input[type=submit]{
@@ -173,6 +289,7 @@
     display: flex;
     justify-content: center;
     margin-top: 5%;
+    margin-bottom: 7%;
 
     input{
         background-color: f39237;
@@ -193,6 +310,7 @@
             }
     }
 }
+
 
 
 
